# trading

./: .gitignore  README.md
trading-bot/: package-lock.json  package.json
trading-bot/src/: App.tsx
trading-server/: README.md  app.py  exchange.py  pyproject.toml  util.py
trading-server/mexcproto/: PrivateAccountV3Api_pb2.py  PrivateDealsV3Api_pb2.py  PrivateOrdersV3Api_pb2.py  PublicAggreBookTickerV3Api_pb2.py  PublicAggreDealsV3Api_pb2.py  PublicAggreDepthsV3Api_pb2.py  PublicBookTickerBatchV3Api_pb2.py  PublicBookTickerV3Api_pb2.py  PublicDealsV3Api_pb2.py  PublicIncreaseDepthsBatchV3Api_pb2.py  PublicIncreaseDepthsV3Api_pb2.py  PublicLimitDepthsV3Api_pb2.py  PublicMiniTickerV3Api_pb2.py  PublicMiniTickersV3Api_pb2.py  PublicSpotKlineV3Api_pb2.py  PushDataV3ApiWrapper_pb2.py
