[project]
name = "trading-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack.Tsai",email = "jack0978330@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "cdp-sdk (>=1.33.0,<2.0.0)",
    "logger (>=1.4,<2.0)",
    "protobuf (>=6.32.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
